re-brand PCS as fasguard-pcap

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,6 @@ include README
 include INSTALL
 include COPYRIGHT
 include CONTRIBUTORS
-include	pcs/bpf/bpf.pxd
-include pcs/pcap/*.h
-include pcs/pcap/LICENSE
+include	fasguard_pcap/bpf/bpf.pxd
+include fasguard_pcap/pcap/*.h
+include fasguard_pcap/pcap/LICENSE
