assume pcap_file() is available and remove pcap_config.h
Assume that the pcap_file() function is available, which makes it
possible to remove pcap_config.h and all of the code used to
generate it.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,5 @@ include INSTALL
 include COPYRIGHT
 include CONTRIBUTORS
 include	fasguard_pcap/bpf.pxd
-include fasguard_pcap/*.h
 include fasguard_pcap/pcap_LICENSE
+include fasguard_pcap/pcap_ex.h
